<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/spanishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish" />

        <RadioButton
            android:id="@+id/frenchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french" />

        <RadioButton
            android:id="@+id/chineseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese" />

        <RadioButton
            android:id="@+id/russianButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/germanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/german" />

        <RadioButton
            android:id="@+id/teluguButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telugu" />
    </RadioGroup>

    <EditText
        android:id="@+id/textOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_spoken_text_will_show_here"
        android:layout_marginTop="16dp"/>
</LinearLayout>
